FIXBUG overflow

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     color: #666666;
     opacity: 1;
     transition: 1s opacity;
+    overflow-x: hidden;
 }
 body.fade-out {
     opacity: 0;
